
- fix issue154: fix handling of vcs-exporting when unicode filenames are
  present.  This is done by striking our own code in favor of Marius Gedminas' 
  vcs exporting functions from his check-manifest project which devpi-client
  now depends on.  This also adds in support for svn and bazaar in addition
  to the already supported git/hg.

2.0.2
----------------

- fix issue135: fix port mismatch for basic auth if port isn't explicitly given
  on https urls.

- refs issue75: pass on basic auth info into pip.cfg and co.

- fix issue144: fix interaction with requests-2.4 by depending
  on devpi-common's new support for enumerating possible Errors

- keep basic authentication info when listing indices or switching index by
  using path only instead of full URL.
  Thanks Trevor Joynson

- only write new client config if it actually changed and pretty print it.
  Thanks Jürgen Hermann for initial PR and ideas.

2.0.1
----------------

- fix a test to expect a 403 instead of a 401 from devpi server from
  unauthorized access 

- fix error message on API version client/server mismatch

- fix issue124: package name url matching for the "devpi test" command


2.0
----------------

- Compatibility with devpi-server >= 2.0.0

- introduce "patchjson PATH JSONFILE" command which allows to send
  a request containing a json data structure to a specified path 

- fix issue85: "devpi list -v" now shows package names with latest
  versions.

- implement issue75: We use the custom X-Devpi-Auth header for authentication
  now, instead of overwriting the Authentication header.

- added experimental support for basic authentication by parsing user and
  password from the url given to the "devpi use" command.

- issue74: added experimental support for client side certificates via
  "devpi use --client-cert"

1.2.2
-------------------------------

- depend on pkginfo>1.2b1 for wheel metadata reading support, 
  remove twine dependency. Thanks Tres Seaver.
